@@ -261,7 +261,7 @@ public class DOMElementImpl extends DOMFunctionImpl implements Element {
 		if (draggable == null) {
 			return false;
 		} else {
-			return new Boolean(draggable);
+			return Boolean.valueOf(draggable);
 		}
 	}
 
@@ -285,7 +285,7 @@ public class DOMElementImpl extends DOMFunctionImpl implements Element {
 		if (content == null) {
 			return false;
 		} else {
-			return new Boolean(content);
+			return Boolean.valueOf(content);
 		}
 	}
 
@@ -317,7 +317,7 @@ public class DOMElementImpl extends DOMFunctionImpl implements Element {
 		if (itemscope == null) {
 			return false;
 		} else {
-			return new Boolean(itemscope);
+			return Boolean.valueOf(itemscope);
 		}
 	}
 
